--- a/app.json
+++ b/app.json
@@ -21,10 +21,12 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.clonespotify"
     },
     "web": {
       "favicon": "./assets/favicon.png"
     }
+    
   }
 }
